syntax = "proto3";

package basic_test_trigger.v1;

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/capabilities/cli/cmd/testdata/fixtures/capabilities/basictrigger";


message Config {
  string name = 1;
  int32 number = 2;
}

message Outputs {
  string cool_output = 1;
}

service BasicTrigger {
  rpc
}