syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/workflows/sdk/pb";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "values/pb/values.proto";

message TriggerSubscriptionRequest {
  string id = 1;
  google.protobuf.Any payload = 2;
}

message Trigger {
  string id = 1;
  google.protobuf.Any payload = 2;
}

message ExecuteRequest {
  string id = 1;
  oneof request {
    google.protobuf.Empty subscribe = 2;
    Trigger trigger = 3;
  }
}

message ExecutionResult {
  google.protobuf.Any payload = 1;
}


message CapabilityRequest {
  string id = 1;
  google.protobuf.Any payload = 2;
}

message CapabilityFuture {
  string id = 1;
  optional string error = 2;
}

message AwaitCapabilitiesRequest {
  repeated string ids = 1;
}

message CapabilityResponse {
  oneof response {
    google.protobuf.Any payload = 1;
    string error = 2;
  }
}

message AwaitCapabilitiesResponse {
  map<string, CapabilityResponse> responses = 1;
}

enum SimpleConsensusType {
  MEDIAN = 0;
  MEDIAN_OF_FIELDS = 1;
  IDENTICAL = 2;
}

message PrimitiveConsensus {
  oneof consensus {
    SimpleConsensusType simple = 1;
  }
}

message BuiltInConsensusRequest {
  PrimitiveConsensus primitiveConsensus = 1;
  oneof observation {
    values.Value value = 2;
    string error = 3;
  }
  optional values.Value default_value = 4;
}

enum Mode {
  DON = 0;
  NODE = 1;
}

message ChangeModeRequest {
  Mode mode = 1;
}